--- a/06_HR/workHours.css
+++ b/06_HR/workHours.css
@@ -1,3 +1,18 @@
-li {
-    list-style: none;
+.staffItem {
+    margin-bottom: var(--middleMargin);
+    padding: var(--littlePadding);
+    /* background: rgba(0, 0, 0, .1); */
+}
+
+.clockHeader {
+    display: flex;
+}
+
+.clockHeader li {
+    margin-right: 40px;
+}
+
+.clockList {
+    display: none;
+    background: rgba(0, 0, 0, .1);
 }
