--- a/06_HR/workHours.css
+++ b/06_HR/workHours.css
@@ -3,35 +3,29 @@
 }
 
 .staffItem {
-    margin-bottom: var(--middleMargin);
-    padding: var(--littlePadding);
+    margin-top: var(--gap3);
     /* background: rgba(0, 0, 0, .1); */
 }
 
 .clockHeader {
     display: flex;
+    width: 40%;
 }
 
 .clockHeader li {
-    margin-right: 40px;
-}
-
-.moreBtn {
-    color:rgb(81, 181, 240);
-    vertical-align: top;
+    flex: 1;
 }
 
 .clockList {
-    /* display: none; */
-    margin-top: var(--littlePadding);
-    padding: var(--littlePadding);
+    display: flex;
+    justify-content: space-between;
     background: rgba(0, 0, 0, .1);
+    margin-top: var(--gap1);
+    padding: var(--gap1);
 }
-
 .clockList li {
-    margin: var(--littlePadding) 0;
-}
-
-.clockDate {
-    margin-right: var(--middleMargin);
+    /* flex: 1; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
