--- a/06_HR/workHours.css
+++ b/06_HR/workHours.css
@@ -23,9 +23,19 @@
     margin-top: var(--gap1);
     padding: var(--gap1);
 }
+
 .clockList li {
     /* flex: 1; */
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.clockDate span {
+    height: 16px;
+    line-height: 16px;
+}
+
+.date {
+    margin-bottom: var(--gap1);
 }
